// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with multiple items 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        4
      </span>
       
      expenses
       totaling 
      <span>
        $3,128.97
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="btn-primary"
        replace={false}
        to="/dashboard/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseSummary with one item 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totaling 
      <span>
        $0.10
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="btn-primary"
        replace={false}
        to="/dashboard/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
